--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PizzaNananas</string>
+
+    <string name="home_page_client_b">Client</string>
+    <string name="home_page_admin_b">Admin</string>
 </resources>
